loopdowhile.Poucet2.scala.code
do {
  avance()
}while (cossing()== false=)